--- a/index_img_folder.html
+++ b/index_img_folder.html
@@ -95,93 +95,93 @@ $(document).ready(function() {
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
-        <img src="res/img/high_1.jpg">
+        <img src="img/high_1.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_2.jpg">
+        <img src="img/high_2.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_3.jpg">
+        <img src="img/high_3.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_4.jpg">
+        <img src="img/high_4.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_5.jpg">
+        <img src="img/high_5.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_6.jpg">
+        <img src="img/high_6.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_7.jpg">
+        <img src="img/high_7.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_8.jpg">
+        <img src="img/high_8.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_9.jpg">
-      </div>
-
-      <!-- separador web
-      <div class="swiper-slide">
-        <img src="res/img/high_10.jpg">
-      </div> -->
-
-      <div class="swiper-slide">
-        <img src="res/img/high_11.jpg">
-      </div>
-
-      <div class="swiper-slide">
-        <img src="res/img/high_12.jpg">
-      </div>
-
-      <div class="swiper-slide">
-        <img src="res/img/high_13.jpg">
-      </div>
-
-      <div class="swiper-slide">
-        <img src="res/img/high_14.jpg">
+        <img src="img/high_9.jpg">
       </div>
 
       <!-- separador web
       <div class="swiper-slide">
-        <img src="res/img/high_15.jpg">
-      </div>
-
-      <div class="swiper-slide">
-        <img src="res/img/high_16.jpg">
+        <img src="img/high_10.jpg">
       </div> -->
 
       <div class="swiper-slide">
-        <img src="res/img/high_17.jpg">
+        <img src="img/high_11.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_18.jpg">
+        <img src="img/high_12.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_19.jpg">
+        <img src="img/high_13.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_20.jpg">
+        <img src="img/high_14.jpg">
+      </div>
+
+      <!-- separador web
+      <div class="swiper-slide">
+        <img src="img/high_15.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_21.jpg">
+        <img src="img/high_16.jpg">
+      </div> -->
+
+      <div class="swiper-slide">
+        <img src="img/high_17.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_22.jpg">
+        <img src="img/high_18.jpg">
+      </div>
+
+      <div class="swiper-slide">
+        <img src="img/high_19.jpg">
+      </div>
+
+      <div class="swiper-slide">
+        <img src="img/high_20.jpg">
+      </div>
+
+      <div class="swiper-slide">
+        <img src="img/high_21.jpg">
+      </div>
+
+      <div class="swiper-slide">
+        <img src="img/high_22.jpg">
       </div>
 
     </div><!-- /.swiper-wrapper -->
