--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ $(document).ready(function() {
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
-        <img src="res/img/high_1.jpg">
+        <img src="./res/img/high_1.jpg">
       </div>
 
       <div class="swiper-slide">
