--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@ $(document).ready(function() {
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
-        <img src="./res/img/high_1.jpg">
+        <img src="res/img/high_1.jpg" />
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_2.jpg">
+        <img src="/res/img/high_2.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_3.jpg">
+        <img src="./res/img/high_3.jpg">
       </div>
 
       <div class="swiper-slide">
