--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="css/idangerous.swiper.css">
 <link rel="stylesheet" href="css/style.css?v=1.8">
 <link rel="stylesheet" href="css/swiper-demos.css?v=1.8">
-<script  src="js/libs/jquery-1.7.1.min.js"></script>
+<script src="js/libs/jquery-1.7.1.min.js"></script>
 
 <!-- Swiper -->
 <script src="js/idangerous.swiper-1.8.min.js"></script>
@@ -95,39 +95,39 @@ $(document).ready(function() {
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
-        <img src="res/img/high_1.jpg" />
+        hola
       </div>
 
       <div class="swiper-slide">
-        <img src="/res/img/high_2.jpg">
+        hola
       </div>
 
       <div class="swiper-slide">
-        <img src="./res/img/high_3.jpg">
+        hola
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_4.jpg">
+        hola
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_5.jpg">
+        hola
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_6.jpg">
+        hola
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_7.jpg">
+        hola
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_8.jpg">
+        hola
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_9.jpg">
+        hola
       </div>
 
       <!-- separador web
@@ -136,7 +136,7 @@ $(document).ready(function() {
       </div> -->
 
       <div class="swiper-slide">
-        <img src="res/img/high_11.jpg">
+        hola
       </div>
 
       <div class="swiper-slide">
