--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ $(document).ready(function() {
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_12.jpg">
+        <img src="high_12.jpg" />
       </div>
 
     </div><!-- /.swiper-wrapper -->
