--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <script src="js/libs/jquery-1.7.1.min.js"></script>
 
 <!-- Swiper -->
-<script src="js/idangerous.swiper-1.8.min.js"></script>
+<!-- <script src="js/idangerous.swiper-1.8.min.js"></script> -->
 <!-- Swiper Scrollbar plugin -->
-<script src="js/idangerous.swiper.scrollbar-1.0.js"></script>
+<!-- <script src="js/idangerous.swiper.scrollbar-1.0.js"></script> -->
 <!-- Demos code -->
-<script src="js/swiper-demos.js?v=1.8"></script>
+<!-- <script src="js/swiper-demos.js?v=1.8"></script> -->
 
 <script type="text/javascript">
 
@@ -90,6 +90,8 @@ $(document).ready(function() {
 </head>
 
 <body>
+
+  <img src="high_12.jpg" />
 
   <div class="swiper-container swiper-dynamic">
     <div class="swiper-wrapper">
