--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ $(document).ready(function() {
 
 <body>
 
-  <img src="high_12.jpg" />
+  <!-- <img src="high_12.jpg" /> -->
 
   <div class="swiper-container swiper-dynamic">
     <div class="swiper-wrapper">
