--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <meta name="description" content="Al Chile es un periódico digital de escuelas localizadas en Costa Rica, las cuales utilizan productos educativos de Libros para Todos como herramienta para su aprendizaje.">
 <meta name="keywords" content="periódico digital, periódico digital estudiantil, Libros para Todos, Costa Rica, Grupo Nación">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/idangerous.swiper.css">
-<link rel="stylesheet" href="css/style.css?v=1.8">
-<link rel="stylesheet" href="css/swiper-demos.css?v=1.8">
+<!-- <link rel="stylesheet" href="css/idangerous.swiper.css"> -->
+<!-- <link rel="stylesheet" href="css/style.css?v=1.8"> -->
+<!-- <link rel="stylesheet" href="css/swiper-demos.css?v=1.8"> -->
 <script src="js/libs/jquery-1.7.1.min.js"></script>
 
 <!-- Swiper -->
