--- a/index_img_folder.html
+++ b/index_img_folder.html
@@ -43,6 +43,8 @@ var altoP = alto-25;//-25 alto paginacion
 $(document).ready(function() {
 // $(window).load(function() {
 
+  // soportan este codigo: iOS, Chrome (android), Safari
+
   // necesario para que wActual y hActual obtengan un valor en relación a la ventana del navegador
   $('.swiper-container').css({ 'height':altoP+'px' });
   $('.swiper-slide').css({     'height':altoP+'px' });
