--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@ $(document).ready(function() {
   var wActual = imagen.width();
   // var hActual = imagen.height();
 
+  alert('wActual: ' + wActual);
+
   // $('.swiper-container').css({ 'width':wActual+'px' });
   // $('.swiper-slide').css({     'width':wActual+'px' });
   $('.swiper-slide img').css({ 'width':wActual+'px' });
