--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 // var ancho = $(window).width();
 var alto  = $(window).height();
 
-var altoP = alto-25;//-25 alto paginacion
+var altoP = alto - 25;//-25 alto paginacion
 
 // alert('Ancho: ' + ancho);// 787
 // alert('Alto: ' + altoP);
@@ -45,11 +45,12 @@ $(document).ready(function() {
   $('.swiper-slide').css({     'height':altoP+'px' });
   $('.swiper-slide img').css({ 'height':altoP+'px' });
 
-  var imagen  = $('#img');
+  // var imagen  = $('#img');
+  var imagen  = $('.swiper-slide img');
   var wActual = imagen.width();
   // var hActual = imagen.height();
 
-  alert('wActual: ' + wActual);
+  alert('wActual: ' + wActual);// = 0 en android
 
   // $('.swiper-container').css({ 'width':wActual+'px' });
   // $('.swiper-slide').css({     'width':wActual+'px' });
