--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@ $(document).ready(function() {
   // var imagen  = $('.swiper-slide img');
   // var wActual = imagen.width();// = 0 en android
 
-  $('.swiper-slide img').css({ 'width':altoP/1.2+'px' });
+  // $('.swiper-slide img').css({ 'width':altoP/1.2+'px' });
+  $('.swiper-slide img').css({ 'margin':'0px auto' });
 
 });// fin $(documen).ready
 
 </script>
 
 </head>
-
 <body>
 
   <div class="swiper-container swiper-dynamic">
