--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@ $(document).ready(function() {
   // var wActual = imagen.width();// = 0 en android
 
   // $('.swiper-slide img').css({ 'width':altoP/1.2+'px' });
+  $('.swiper-slide').css({ 'margin':'0px auto' });
+  $('.swiper-container').css({ 'margin':'0px auto' });
   $('.swiper-slide img').css({ 'margin':'0px auto' });
 
 });// fin $(documen).ready
