--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <title>Al Chile - Libros para Todos | Grupo Nación</title>
 <meta name="description" content="Al Chile es un periódico digital de escuelas localizadas en Costa Rica, las cuales utilizan productos educativos de Libros para Todos como herramienta para su aprendizaje.">
 <meta name="keywords" content="periódico digital, periódico digital estudiantil, Libros para Todos, Costa Rica, Grupo Nación">
-<!-- <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=2.5"> -->
+<!-- 
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.5, user-scalable=yes"> -->
 
 <link rel="stylesheet" href="css/idangerous.swiper.css">
 <link rel="stylesheet" href="css/style.css?v=1.8">
