--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <meta name="description" content="Al Chile es un periódico digital de escuelas localizadas en Costa Rica, las cuales utilizan productos educativos de Libros para Todos como herramienta para su aprendizaje.">
 <meta name="keywords" content="periódico digital, periódico digital estudiantil, Libros para Todos, Costa Rica, Grupo Nación">
 
-<!-- 
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.5, user-scalable=yes"> -->
+<!--  -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.5, user-scalable=yes">
 <!-- 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.5, user-scalable=1"> -->
 <!-- 
@@ -28,8 +28,8 @@
 
 <!-- Swiper -->
 <script src="js/idangerous.swiper-1.8.min.js"></script>
-<!-- Swiper Scrollbar plugin
-<script src="js/idangerous.swiper.scrollbar-1.0.js"></script> -->
+<!-- Swiper Scrollbar plugin -->
+<script src="js/idangerous.swiper.scrollbar-1.0.js"></script>
 <!-- Demos code -->
 <script src="js/swiper-demos.js?v=1.8"></script>
 
@@ -81,7 +81,7 @@ $(document).ready(function() {
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
-        <img src="res/img/high_1.jpg" id="img">
+        <img src="res/img/high_1.jpg">
       </div>
 
       <div class="swiper-slide">
