--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ $(document).ready(function() {
   $('.swiper-slide img').css({ 'height':altoP+'px' });
 
   // var imagen  = $('#img');
-  var imagen  = $('.swiper-slide img');
+  // var imagen  = $('.swiper-slide img');
   var wActual = imagen.width();// = 0 en android
   alert('wActual: ' + wActual);
 
@@ -88,7 +88,7 @@ $(document).ready(function() {
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
-        <img src="res/img/high_1.jpg" id="imgSlide">
+        <img src="res/img/high_1.jpg" id="imgSlide"> <!-- -->
       </div>
 
       <div class="swiper-slide">
