--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 var alto  = $(window).height();
 var altoP = alto - 25;//-25 alto paginacion
 
-var imagen = $('#imgSlide');
+// var imagen = $('#imgSlide');
 
 $(document).ready(function() {
 // $(window).load(function() {
@@ -68,8 +68,8 @@ $(document).ready(function() {
 
   // var imagen  = $('#img');
   // var imagen  = $('.swiper-slide img');
-  var wActual = imagen.width();// = 0 en android
-  alert('wActual: ' + wActual);
+  // var wActual = imagen.width();// = 0 o null en android
+  // alert('wActual: ' + wActual);
 
   // $('.swiper-slide img').css({ 'width':altoP/1.2+'px' });
   // $('.swiper-slide').css({ 'margin':'0px auto' });
@@ -88,7 +88,7 @@ $(document).ready(function() {
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
-        <img src="res/img/high_1.jpg" id="imgSlide"> <!-- -->
+        <img src="res/img/high_1.jpg"> <!-- id="imgSlide" -->
       </div>
 
       <div class="swiper-slide">
