--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.5, user-scalable=1"> -->
 <!-- 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.5, user-scalable=true"> -->
-
-<meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=yes' />
+<!-- 
+<meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=yes' /> -->
 
 
 <link rel="stylesheet" href="css/idangerous.swiper.css">
@@ -75,6 +75,11 @@ $(document).ready(function() {
   // $('.swiper-slide').css({ 'margin':'0px auto' });
   // $('.swiper-container').css({ 'margin':'0px auto' });
   // $('.swiper-slide img').css({ 'margin':'0px auto' });
+
+  $('.swiper-slide img').on('touchstart', function(){
+    // $(this).addClass('select');
+    alert('touchstart');
+  }
 
 });// fin $(documen).ready
 
