--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ $(document).ready(function() {
     // alert('touchstart');
   // }
 
-  $('.swiper-slide').bind('doubletap', function(event){
+  $('.swiper-container').bind('doubletap', function(event){
       alert('doubletap');
   });
 
