--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ $(document).ready(function() {
       // console.log(this, e);
       // var imgTouch = ;
       // alert('.touch doubletap');
-      alert(this, img.src);
+      alert(this.img.src);
       $('.swiper-container').css({ 'display':'none' });
   });
 
