--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ $(document).ready(function() {
       // console.log(this, e);
       // var imgTouch = ;
       // alert('.touch doubletap');
+      $('.swiper').css({ 'display':'none' });
       alert(this.img.src);
-      $('.swiper-container').css({ 'display':'none' });
   });
 
   
@@ -108,7 +108,7 @@ $(document).ready(function() {
 <!-- <body onload="OnLoad();"> -->
 <body>
 
-  <div class="swiper-container swiper-dynamic">
+  <div class="swiper-container swiper-dynamic swiper">
     <div class="swiper-wrapper">
 
       <div class="swiper-slide touch">
