--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@ $(document).ready(function() {
   
   // direct event
   $('.touch').on('doubletap', function(e) {
-      // console.log(this, e);
-      // var imgTouch = ;
       // alert('.touch doubletap');
-      $('.swiper').css({ 'display':'none' });
-      alert(this.img.src);
+      // $('.swiper').css({ 'display':'none' });
+      // alert(this.img.src);
+      // var div = document.createElement('div');
+      $(".swiper").addClass("zoomImg");
   });
 
   
