--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ $(document).ready(function() {
   <div class="swiper-container"> <!-- swiper-dynamic -->
     <div class="swiper-wrapper">
 
-      <div class="swiper-slide"> <!-- touch -->
+      <div class="swiper-slide touch"> <!-- -->
         <img src="res/img/high_1.jpg"> <!-- id="imgSlide" -->
       </div>
 
