--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@ var altoP = alto - 25;//-25 alto paginacion
 // var imagen = $('#imgSlide');
 
 function changeIt(_src){
-    alert(_src);
+    // alert(_src);
+    var name = img.src;
+    alert(name);
 }​
 
 var zoomOn = false;
