--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ var altoP = alto - 25;//-25 alto paginacion
 
 // var imagen = $('#imgSlide');
 
-function changeIt(_src){
+// function changeIt(_src){
+function changeIt(img){
     // alert(_src);
     var name = img.src;
     alert(name);
