--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@ var altoP = alto - 25;//-25 alto paginacion
 // var imagen = $('#imgSlide');
 
 // function changeIt(_src){
-function changeIt(img){
-    // alert(_src);
-    var name = img.src;
-    alert(name);
-}​
+// function changeIt(img){
+//     // alert(_src);
+//     var name = img.src;
+//     alert(name);
+// }​
 
 // var zoomOn = false;
 
@@ -108,6 +108,12 @@ $(document).ready(function() {
     // }// fin if( zoomOn
 
   // });// fin $('.touch'
+
+
+  function changeIt(img){
+      var name = img.src;
+      alert(name);
+  }​
 
   
 
