--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ $(document).ready(function() {
     <div class="swiper-wrapper">
 
       <div class="swiper-slide"> <!-- touch -->
-        <img ondblclick="changeIt(this.src)" src="res/img/high_1.jpg"> <!-- id="imgSlide" -->
+        <img ondblclick="changeIt(this)" src="res/img/high_1.jpg"> <!-- id="imgSlide" -->
       </div>
 
       <div class="swiper-slide">
